# AHP

./: README.md  app.py  pyproject.toml
multicriterio/: multicriterio.py
