[tool.poetry]
name = "multicriterio"
version = "0.1.0"
description = ""
authors = ["gsjunqueira <giovanisjunqueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
